--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -34,3 +34,20 @@
 .post-meta strong {
   font-weight: bold;
 }
+
+.video-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+  max-width: 100%;
+  margin-bottom: 30px;
+}
+
+.video-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
